# django-simple-bulk-emailer

./: MANIFEST.in  README.rst  setup.cfg  setup.py
django_simple_bulk_emailer/: admin.py  apps.py  forms.py  models.py  runtests.py  urls.py  views.py
django_simple_bulk_emailer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
django_simple_bulk_emailer/management/commands/: delete_expired_emails.py  delete_unsubscribed_users.py  import_sites.py  send_bulk_email.py
django_simple_bulk_emailer/migrations/: 0002_auto_20210812_1535.py  0004_bulkemail_update_datetime.py
django_simple_bulk_emailer/static/django_simple_bulk_emailer/css/: django_simple_bulk_emailer.css  django_simple_bulk_emailer_preview.css
django_simple_bulk_emailer/templates/django_simple_bulk_emailer/subscription/emails/: email_template_text.txt
django_simple_bulk_emailer/templates/django_simple_bulk_emailer/subscription/pages/: list_view.html  page_view.html
django_simple_bulk_emailer/templates/django_simple_bulk_emailer/universal/emails/: subscribe_email_html.html
django_simple_bulk_emailer/templates/django_simple_bulk_emailer/universal/pages/: bulk_email_preview.html  manage_subscriptions.html  manage_subscriptions_success.html  quick_unsubscribe.html  subscribe.html
django_simple_bulk_emailer/tests/: functions.py  test_commands.py  test_forms.py  test_models.py  test_views.py  urls.py
