[metadata]
name = django_simple_bulk_emailer
version = 0.1.5
author = Jonathan Rickard
author_email = jonathan@jonathanrickard.com
license = MIT License
description = A Django app for sending bulk email
keywords = django, email
url = https://github.com/jonathanrickard/django-simple-bulk-emailer
long_description = file: README.rst
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Developers
    Topic :: Internet :: WWW/HTTP
    License :: OSI Approved :: MIT License

[options]
packages = find:
include_package_data = True
zip_safe = True
install_requires =
    Django >= 2.2.17, < 3.0
    django-admin-sortable2 >= 0.6.21
    django-ckeditor >= 5.6.1
    django-simple-file-handler >= 0.2.6
    mailchimp3 >= 3.0
    Pillow >= 5.0
    requests >= 2.21.0
